Lasagna Changelog


What is Lasagna?
Lasagna is a Python-based image viewer for 3-D anatomy datasets. It was inspired by the "slicing viewer",
VV (https://www.creatis.insa-lyon.fr/rio/vv). Lasagna was originally written in 2015/2016 at the Mrsic-Flogel
laboratory, Basel, by Rob Campbell.

2019/06/25
- Antonin Blot
Improve the embeded ipython console. Giving the -C argument will start an ipython session in the terminal with `app`
and `tasty` in the namespace.

2019/06/22
- Rob Campbell
General work on add_line_plugin. It now handles point insertion, 3D line fit works better, bug fixes. 
Rename "Base stack" to "Image stack"


2019/06/18
- Rob Campbell
8f9bc0134c64a4d3a2e3d199f15c23a5c28c46f8
Move code that generates ingredient QStandardItem for list out for the points, lines, and imagestack 
ingredients and into lasagna_ingredient. Remove orphan version of lasanga_ingredient in root dir.

0c43bac4171f48099d58c27f609a7b07e7f55cf6
Replace some instances of lasanga.initialiseAxes() with the the new lasagna.update_2D_plot_ingredients_in_axes
Changes made in lasagna_object.py, overlay_random_points_plugin.py, and add_line_plugin.py

Lasagna.axisClicked() now stores the button that generated that click in self.last_button_click_in_axis
1=left, 2=right, 4=middle


2019/06/18
- Rob Campbell
Start to apply Black (https://black.readthedocs.io/en/latest/) to all new commits. 


2019/06/13 
- Rob Campbell
Bugfixes and minor re-organisation. 
Replace lasagna which (caused a crash) with shutils.which (since we now are on >>Python 3.3)
Bugfix in MHD header reader that was causing files to fail to load. 


2019/06/12 
- Rob Campbell
Very extensive changes have been made to the dev branch and many things currently don't start. 
First goal is to get everything running again. Some things are partially refactored, like tree, 
and so aren't working. The first goal is to get everything running and then we can go back and 